update pom to fix warning