@@ -30,6 +30,7 @@
           <mainClass>fftcg.MainWindow</mainClass>
           <jvmArgs>
             <jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
+            <jvmArg>--enable-native-access=org.xerial.sqlitejdbc</jvmArg>
           </jvmArgs>
         </configuration>
       </plugin>
